--- a/static-files/index.html
+++ b/static-files/index.html
@@ -32,7 +32,7 @@
   <h2><em>Twitblob</em></h2>
   <p><em>Twitblob</em> is a simple cross-origin RESTful API that gives
   all Twitter users a small amount of public JSON blob storage on a
-  host server. It also handles three-legged Twitter OAUTH key
+  host server. It also handles three-legged Twitter OAuth key
   exchange, allowing web pages to add social functionality with
   minimum fuss.</p>
   <h3>Requirements</h3>
