Added 'fork me on github' ribbon

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 </head>
 <body>
 <div id="content">
+  <a href="http://github.com/toolness/twitblob"><img
+  style="position: absolute; top: 0; right: 0; border: 0;"
+  src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+  alt="Fork me on GitHub" /></a>
   <h2><em>Twitblob</em></h2>
   <p><em>Twitblob</em> is a simple cross-origin RESTful API that gives
   all Twitter users a small amount of public JSON blob storage on a
